Изменено описание устройства лог-сервиса

--- a/docs/Изменения в лог-сервисах.md
+++ b/docs/Изменения в лог-сервисах.md
@@ -1,10 +1,28 @@
-# Изменения в лог-сервисах
+# Устройство фронтенда и бэкенда в лог-сервисах
 
 ## Общее устройство лог-сервиса
 
-Архитектура лог-сервиса представляется следующим образом. Каждый сервис отдельно шлет лог. В случае бэкенда - с помощью `log4net`, в случае фронтенда (и других возможных сервисов) - с помощью адаптера. Логи собирает сборщик. В нашем случае в связке с Grafana Loki сборщиком является `promtail`. После чего логи попадают в базу данных Loki, а оттуда в инструмент анализа Grafana. В Grafana можно зайти через веб-интерфейс и искать логи.
+Архитектура лог-сервиса представляется следующим образом:
 
-Чтобы обеспечить передачу логов по http используется пакет `NewPlatfrom.Flexberry.LogService`. Пакет поддерживает работу и с netframework и netstandart. Этот пакет состоит из `LogRequest`, который принимает на вход логи; `Extensions`, которые настраивают роуты (причем для netframework и netstandart используются разные классы расширений); `LogsController`, который производит отправку логов.
+![Архитектура лог-сервиса](images/log-service-architecture.png)
+
+Фронтед шлет логи для ember data напрямую в таблицу ApplicatonLog базы данных. Чтобы отправлять логи по http в лог-сервис нужен пакет `NewPlatform.Flexberry.LogService.WebApi`. Пакет поддерживает работу и с `netframework` и `netcore`. Внутри пакета контроллер принимает на вход логи, а LogService отправляет лог дальше в log4net, который направляет их в Grafana Loki.
+
+Для использования NewPlatform.Flexberry.LogService.WebApi в своем приложении потребуется настроить регистрацию роута. По умолчанию для `netcore это`:
+
+    app.UseMvc(routes =>
+        {
+            string baseUrl = new Uri(Configuration["BackendRoot"]).ToString();
+            routes.MapLogsRoute(baseUrl);
+        });
+
+Для `netframework` в методе Configure в файле ODataBackend\App_Start\ODataConfig.cs вызывается метод `config.MapLogControllerRoute();` Если не задавать параметров, то по умолчанию `routeName = "logs"`, но можно задать и свой. Необязательно залезать в код odata, можно создать свой RouteConfig, добавить в него аналогичный метод Configure и вызвать из метода Application_Start.
+
+Поступивший роут преобразуется как:
+
+    Route(routeName, "api/logs", defaults: new { controller = "Logs", action = "PostLog" })
+
+Таким образом, логи будут доступны по "адрес_вашего_роута/api/logs".
 
 ## Аппендеры log4net
 
@@ -61,4 +79,4 @@
 
 ## Изменения в лог-сервисе фронтенда
 
-Ember записывает логи в базу данных в таблицу LogApplication. Теперь в `environment` будет доступен флаг `sendViaHttp`. С включенным флагом эмбер-методы отправки лога будут переопределяться и отправляться в лог-сервис.
+Ember с помощью Ember.Logger записывает логи в базу данных в таблицу LogApplication. Теперь в `environment` будет доступен флаг `sendViaHttp`. С включенным флагом эмбер-методы отправки лога будут переопределяться и отправляться в лог-сервис. Флаг `httpLogServiceUrl` указывает куда именно их отправлять.
