Добавлена информаиця про флаги

--- a/docs/Фильтрация сообщений в лог-сервисе эмбера.md
+++ b/docs/Фильтрация сообщений в лог-сервисе эмбера.md
@@ -4,6 +4,35 @@
 
 Ember с помощью Ember.Logger записывает логи в базу данных в таблицу LogApplication. Теперь в `environment` будет доступен флаг `sendViaHttp`. С включенным флагом эмбер-методы отправки лога будут переопределяться и отправляться в лог-сервис. Флаг `httpLogServiceUrl` указывает куда именно их отправлять.
 
+Также, с помощью флага `enabled` можно включить или отключить лог-сервис полностью. Такими флагами, как `storeErrorMessages`, `storeWarnMessages` и т.д. можно включать/выключать сообщения отдельных уровней (error, warn, log, info, debug, deprecate, promise). Флаг `errorMessageFilterActive` отвечает за включение фильтра мусорных логов, список которых также настраивается.
+
+Конфигурация логера может выглядеть следующим образом:
+
+    APP: {
+          // Log service settings.
+          log: {
+            // Flag: indicates whether log service is enabled or not.
+            enabled: true,
+
+            // Flag: indicates whether to store error messages or not.
+            storeErrorMessages: true,
+            storeWarnMessages: false,
+            storeLogMessages: true,
+            storeInfoMessages: false,
+            storeDebugMessages: false,
+            storeDeprecationMessages: false,
+            storePromiseErrors: true,
+            showPromiseErrors: true,
+            errorMessageFilterActive: false,
+
+            // Flag: indicates whether to send messages to backend
+            sendViaHttp: true,
+
+            // Backend logservice url
+            httpLogServiceUrl: backendUrl + '/api/logs',
+          },
+    }
+
 ## Список мусорных логов
 
 В `Ember Flexberry` в `addon/services/log.js` есть список логов, которые являются избыточными и засоряют таблицу логов. В данный момент по умолчанию список состоит из сообщений:
